--- a/SecureWalk/src/app/components/menu/menu.component.html
+++ b/SecureWalk/src/app/components/menu/menu.component.html
@@ -52,6 +52,14 @@
       Evaluacion Incidente
       <mat-icon>poll</mat-icon>
     </button>
+    <button mat-button [matMenuTriggerFor]="menuPost">
+      Post
+      <mat-icon>poll</mat-icon>
+    </button>
+    <button mat-button [matMenuTriggerFor]="menuComentario">
+      Comentario
+      <mat-icon>poll</mat-icon>
+    </button>
   </div>
   <span class="toolbar-spacer"></span>
   <div class="right-menu">
@@ -99,7 +107,14 @@
   <button mat-menu-item routerLink="/evaluacionincidentes">Listar</button>
   <button mat-menu-item routerLink="/evaluacionincidentes/formulario">Insertar</button>
 </mat-menu>
-
+<mat-menu #menuPost="matMenu">
+  <button mat-menu-item routerLink="/post">Listar</button>
+  <button mat-menu-item routerLink="/post/formulario">Insertar</button>
+</mat-menu>
+<mat-menu #menuComentario="matMenu">
+  <button mat-menu-item routerLink="/comentario">Listar</button>
+  <button mat-menu-item routerLink="/comentario/formulario">Insertar</button>
+</mat-menu>
 <mat-menu #menuSalir="matMenu">
   <button mat-menu-item routerLink="/login" (click)="cerrar()">
     <mat-icon>logout</mat-icon>
