--- a/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
+++ b/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
@@ -1,60 +1,51 @@
-<div class="container" >
-    <div>
-        <h1 class="titulo">Lista de encuentas</h1>
+<div class="container">
+  <h1 class="page-title">Listado de Encuestas y sus Preguntas</h1>
+
+  <div *ngIf="encuestasConPreguntas.length > 0; else noDataFound" class="cards-grid">
+    <mat-card *ngFor="let encuesta of encuestasConPreguntas" class="survey-card mat-elevation-z4">
+      <mat-card-header>
+        <mat-card-title class="card-title">{{ encuesta.nombreEncuesta }} (ID: {{ encuesta.idEncuesta }})</mat-card-title>
+        <mat-card-subtitle>
+          Creada el: {{ encuesta.fechaCreacionEncuesta | date:'longDate' }}
+        </mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content>
+        <p class="card-description">{{ encuesta.descripcionEncuesta }}</p>
+
+        <mat-expansion-panel class="questions-expansion-panel" hideToggle>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Preguntas de la Encuesta ({{ encuesta.preguntas.length }} preguntas)
+            </mat-panel-title>
+            <mat-panel-description>
+              Haz clic para ver/ocultar las preguntas
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+
+          <div class="questions-list">
+            <div *ngIf="encuesta.preguntas.length > 0; else noQuestionsForSurvey">
+              <div *ngFor="let pregunta of encuesta.preguntas" class="question-item">
+                <p><strong>Pregunta {{ pregunta.textoPregunta }}</strong></p>
+                <p><small>Tipo de Pregunta: {{ pregunta.tipoPregunta }}</small></p>
+                <hr> <!-- Separador entre preguntas -->
+              </div>
+            </div>
+            <!-- Mensaje si la encuesta no tiene preguntas -->
+            <ng-template #noQuestionsForSurvey>
+              <p class="no-questions-message">Esta encuesta no tiene preguntas asociadas.</p>
+            </ng-template>
+          </div>
+        </mat-expansion-panel>
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <ng-template #noDataFound>
+    <div class="no-data-container">
+      <p>No se encontraron encuestas con preguntas para mostrar.</p>
+      <mat-icon class="no-data-icon">sentiment_dissatisfied</mat-icon>
     </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-        <!-- Position Column -->
-        <ng-container matColumnDef="c1">
-            <th mat-header-cell *matHeaderCellDef> ID. </th>
-            <td mat-cell *matCellDef="let element"> {{element.idEncuesta}} </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="c2">
-            <th mat-header-cell *matHeaderCellDef> Nombre Encuesta </th>
-            <td mat-cell *matCellDef="let element"> {{element.nombreEncuesta}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="c3">
-            <th mat-header-cell *matHeaderCellDef> Descripción </th>
-            <td mat-cell *matCellDef="let element"> {{element.descripcionEncuesta}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="c4">
-            <th mat-header-cell *matHeaderCellDef> Fecha </th>
-            <td mat-cell *matCellDef="let element"> {{element.fechaCreacionEncuesta}} </td>
-        </ng-container>
-
-                <!-- Symbol Column -->
-    <ng-container matColumnDef="c5">
-      <th mat-header-cell *matHeaderCellDef>Actualizar</th>
-      <td mat-cell *matCellDef="let element">
-        <button matButton [routerLink]="['ediciones', element.idEncuesta]">
-          <mat-icon>edit</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c6">
-      <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-      <td mat-cell *matCellDef="let element">
-        <button matButton (click)="eliminar(element.idEncuesta)">
-          <mat-icon>delete_forever</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-
-    <!-- Paginador fuera de la tabla -->
-    <mat-paginator [length]="dataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 15]"
-        aria-label="Seleccionar paginación">
-    </mat-paginator>
+  </ng-template>
 </div>
