--- a/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
+++ b/SecureWalk/src/app/components/encuesta/listarencuesta/listarencuesta.component.html
@@ -1,51 +1,57 @@
-<div class="container">
-  <h1 class="page-title">Listado de Encuestas y sus Preguntas</h1>
-
-  <div *ngIf="encuestasConPreguntas.length > 0; else noDataFound" class="cards-grid">
-    <mat-card *ngFor="let encuesta of encuestasConPreguntas" class="survey-card mat-elevation-z4">
-      <mat-card-header>
-        <mat-card-title class="card-title">{{ encuesta.nombreEncuesta }} (ID: {{ encuesta.idEncuesta }})</mat-card-title>
-        <mat-card-subtitle>
-          Creada el: {{ encuesta.fechaCreacionEncuesta | date:'longDate' }}
-        </mat-card-subtitle>
-      </mat-card-header>
-
-      <mat-card-content>
-        <p class="card-description">{{ encuesta.descripcionEncuesta }}</p>
-
-        <mat-expansion-panel class="questions-expansion-panel" hideToggle>
-          <mat-expansion-panel-header>
-            <mat-panel-title>
-              Preguntas de la Encuesta ({{ encuesta.preguntas.length }} preguntas)
-            </mat-panel-title>
-            <mat-panel-description>
-              Haz clic para ver/ocultar las preguntas
-            </mat-panel-description>
-          </mat-expansion-panel-header>
-
-          <div class="questions-list">
-            <div *ngIf="encuesta.preguntas.length > 0; else noQuestionsForSurvey">
-              <div *ngFor="let pregunta of encuesta.preguntas" class="question-item">
-                <p><strong>Pregunta {{ pregunta.textoPregunta }}</strong></p>
-                <p><small>Tipo de Pregunta: {{ pregunta.tipoPregunta }}</small></p>
-                <hr> <!-- Separador entre preguntas -->
-              </div>
-            </div>
-            <!-- Mensaje si la encuesta no tiene preguntas -->
-            <ng-template #noQuestionsForSurvey>
-              <p class="no-questions-message">Esta encuesta no tiene preguntas asociadas.</p>
-            </ng-template>
-          </div>
-        </mat-expansion-panel>
-
-      </mat-card-content>
-    </mat-card>
+<div class="main-container">
+  <div class="top-header-section">
+    <div class="title-add-block">
+      <h1 class="page-title">Listado de Encuestas y sus Preguntas</h1>
+    </div>
   </div>
 
-  <ng-template #noDataFound>
-    <div class="no-data-container">
-      <p>No se encontraron encuestas con preguntas para mostrar.</p>
-      <mat-icon class="no-data-icon">sentiment_dissatisfied</mat-icon>
+  <div class="content-cards-section">
+    <div *ngIf="encuestasConPreguntas.length > 0; else noDataFound" class="cards-grid">
+      <mat-card *ngFor="let encuesta of encuestasConPreguntas" class="survey-card mat-elevation-z4">
+        <mat-card-header>
+          <mat-card-title class="card-title">{{ encuesta.nombreEncuesta }} (ID: {{ encuesta.idEncuesta }})</mat-card-title>
+          <mat-card-subtitle class="card-subtitle">
+            Creada el: {{ encuesta.fechaCreacionEncuesta | date:'longDate' }}
+          </mat-card-subtitle>
+        </mat-card-header>
+
+        <mat-card-content>
+          <p class="card-description">{{ encuesta.descripcionEncuesta }}</p>
+
+          <mat-expansion-panel class="questions-expansion-panel" hideToggle>
+            <mat-expansion-panel-header>
+              <mat-panel-title class="panel-title">
+                Preguntas de la Encuesta ({{ encuesta.preguntas.length }} preguntas)
+              </mat-panel-title>
+              <mat-panel-description class="panel-description">
+                Haz clic para ver/ocultar las preguntas
+              </mat-panel-description>
+              <mat-icon class="expansion-toggle-icon">expand_more</mat-icon>
+            </mat-expansion-panel-header>
+
+            <div class="questions-list">
+              <div *ngIf="encuesta.preguntas.length > 0; else noQuestionsForSurvey">
+                <div *ngFor="let pregunta of encuesta.preguntas" class="question-item">
+                  <p><strong>Pregunta: </strong>{{ pregunta.textoPregunta }}</p>
+                  <p><small><strong>Tipo: </strong>{{ pregunta.tipoPregunta }}</small></p>
+                  <div class="item-separator"></div>
+                </div>
+              </div>
+              <ng-template #noQuestionsForSurvey>
+                <p class="no-questions-message">Esta encuesta no tiene preguntas asociadas.</p>
+              </ng-template>
+            </div>
+          </mat-expansion-panel>
+
+        </mat-card-content>
+      </mat-card>
     </div>
-  </ng-template>
+
+    <ng-template #noDataFound>
+      <div class="no-data-container">
+        <p>No se encontraron encuestas con preguntas para mostrar.</p>
+        <mat-icon class="no-data-icon">sentiment_dissatisfied</mat-icon>
+      </div>
+    </ng-template>
+  </div>
 </div>
