--- a/SecureWalk/src/app/components/pregunta/listarpregunta/listarpregunta.component.html
+++ b/SecureWalk/src/app/components/pregunta/listarpregunta/listarpregunta.component.html
@@ -1,55 +1,53 @@
-<div class="container" >
-    <div>
-        <h1 class="titulo">Lista de preguntas</h1>
+<div class="main-container">
+  <div class="header-section">
+    <h1 class="titulo">Lista de Preguntas</h1>
     </div>
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-        <!--- Note that these columns can be defined in any order.
-                      The actual rendered columns are set as a property on the row definition" -->
+  <div class="table-container mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.idPregunta }}</td>
+      </ng-container>
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="c1">
-            <th mat-header-cell *matHeaderCellDef> ID. </th>
-            <td mat-cell *matCellDef="let element"> {{element.idPregunta}} </td>
-        </ng-container>
+      <ng-container matColumnDef="pregunta">
+        <th mat-header-cell *matHeaderCellDef>Pregunta</th>
+        <td mat-cell *matCellDef="let element">{{ element.textoPregunta }}</td>
+      </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="c2">
-            <th mat-header-cell *matHeaderCellDef> Pregunta </th>
-            <td mat-cell *matCellDef="let element"> {{element.textoPregunta}} </td>
-        </ng-container>
+      <ng-container matColumnDef="tipo">
+        <th mat-header-cell *matHeaderCellDef>Tipo de Pregunta</th>
+        <td mat-cell *matCellDef="let element">{{ element.tipoPregunta }}</td>
+      </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="c3">
-            <th mat-header-cell *matHeaderCellDef> Tipos Pregunta </th>
-            <td mat-cell *matCellDef="let element"> {{element.tipoPregunta}} </td>
-        </ng-container>
+      <ng-container matColumnDef="actualizar">
+        <th mat-header-cell *matHeaderCellDef>Actualizar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="primary" [routerLink]="['ediciones', element.idPregunta]">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-        <!-- Symbol Column -->
-    <ng-container matColumnDef="c4">
-      <th mat-header-cell *matHeaderCellDef>Actualizar</th>
-      <td mat-cell *matCellDef="let element">
-        <button matButton [routerLink]="['ediciones', element.idPregunta]">
-          <mat-icon>edit</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="eliminar">
+        <th mat-header-cell *matHeaderCellDef>Eliminar</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button color="warn" (click)="eliminar(element.idPregunta)">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="c5">
-      <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-      <td mat-cell *matCellDef="let element">
-        <button matButton (click)="eliminar(element.idPregunta)">
-          <mat-icon>delete_forever</mat-icon>
-        </button>
-      </td>
-    </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="5">No se encontraron preguntas.</td>
+      </tr>
     </table>
-    <!-- Paginador fuera de la tabla -->
+
     <mat-paginator [length]="dataSource.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 15]"
-        aria-label="Seleccionar paginación">
+      aria-label="Seleccionar paginación">
     </mat-paginator>
+  </div>
 </div>
